[package]
name = "secret_santa"
description = "Generates Secret Santa mappings."
version = "0.1.0"
authors = ["han-tyumi <mmchamp95@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/han-tyumi/secret-santa"
repository = "https://github.com/han-tyumi/secret-santa"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.7.1"
rand = "0.8.0"
clap = "2.33.3"
